<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/main_dest">

    <fragment
        android:id="@+id/main_dest"
        android:name="com.mapx.kosten.mosimpa.presentation.fragments.internments.InternmentsFragment"
        android:label="@string/nav_label_internments">
        <action
            android:id="@+id/action_patientsFragment_to_sensorsFragment"
            app:destination="@id/sensors_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/sensors_dest"
        android:name="com.mapx.kosten.mosimpa.presentation.fragments.sensors.SensorsFragment"
        android:label="@string/nav_label_sensors"
        tools:layout="@layout/fragment_sensors">
        <action
            android:id="@+id/action_sensorsFragment_to_sensorDetailFragment"
            app:destination="@id/sensorDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="patientId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
    <fragment
        android:id="@+id/sensorDetailFragment"
        android:name="com.mapx.kosten.mosimpa.presentation.fragments.sensorDetail.SensorDetailFragment"
        android:label="fragment_sensor_detail"
        tools:layout="@layout/fragment_sensor_detail" />
    <fragment
        android:id="@+id/settings_dest"
        android:name="com.mapx.kosten.mosimpa.presentation.fragments.settings.SettingsFragment"
        android:label="@string/nav_label_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settings_dest_to_settingsPatientFragment"
            app:destination="@id/settingsPatient_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/settingsPatient_dest"
        android:name="com.mapx.kosten.mosimpa.presentation.fragments.settingsPatient.SettingsPatientFragment"
        android:label="@string/nav_label_settings_patient"
        tools:layout="@layout/fragment_settings_patient" >
        <argument
            android:name="patientId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
    <fragment
        android:id="@+id/info_dest"
        android:name="com.mapx.kosten.mosimpa.presentation.fragments.info.InfoFragment"
        android:label="@string/nav_label_info"
        tools:layout="@layout/fragment_info" />
</navigation>